Feature/profunctor (#111)
* Created Profunctor and equivalent functionality in Optic